--- a/search/templates/search_mini.css
+++ b/search/templates/search_mini.css
@@ -3,7 +3,7 @@
 	margin-top:20px;
 	margin-right:25px;
 }
-
+ 
 .search_entry {
 	background:url('images/search.png') no-repeat;
 	border:none;
@@ -22,17 +22,28 @@
 	background:url('images/search.png') no-repeat;
 	border:none;	
 }
-
+ 
 .search_submit {
 	padding:0;
 	border:none;
-	background:none;
+	width:31px;
+	height:22px;
+	background:url('images/search_submit.png') no-repeat;
 }
 .search_submit:hover {
 	border:none;
-	background:none;
+	background:url('images/search_submit.png') no-repeat;
+	cursor:  pointer;
 }
 .search_submit:focus {
 	border:none;
-	background:none;
+	background:url('images/search_submit.png') no-repeat;
+}
+ 
+input.mini_search_vert {
+	background:url('../search_mini.png') no-repeat;
+	background-color:#FFFFFF;
+	background-position:2px 1px;
+	padding-left:22px;
+	border-radius:3px;
 }
