--- a/connect/templates/connect_mini.css
+++ b/connect/templates/connect_mini.css
@@ -16,3 +16,38 @@
 	background:url('images/form.png') no-repeat right bottom;
 	border:none;
 }
+ 
+div.connect_align ,p.connect_align {
+	text-align:right;
+	margin-right:8px;
+}
+ 
+.connect_align form {
+	text-align:right;
+	display:inline;
+}
+ 
+.connect_inline {
+	display:inline;
+}
+ 
+.connect_content {
+	text-align:left;
+}
+ 
+.connect_content ul{
+	margin:0;
+	padding:0;
+	padding-left:4px;
+	list-style-type:none;
+	line-height:18px;
+}
+ 
+.connect_register {
+	margin:0;
+	margin-top:5px;
+}
+ 
+.connect_vertical input#login, .connect_vertical input#password {
+	width:120px;
+}
