--- a/templates/base/theme/content.css
+++ b/templates/base/theme/content.css
@@ -53,16 +53,16 @@ table caption a {
 }
 
 table th:first-child{
-	-moz-border-radius-topleft:4px;
-	-khtml-border-radius-topleft:5px;
-	-webkit-border-top-left-radius:5px;
-    border-radius:5px;
+	-moz-border-radius:4px 0 0 4px;
+	-khtml-border-radius:5px 0 0 5px;
+	-webkit-border-radius:5px 0 0 5px;
+    border-radius:5px 0 0 5px;
 }
 table th:last-child{
-	-moz-border-radius-topright:4px;
-	-khtml-border-radius-topright:5px;
-	-webkit-border-top-right-radius:5px;
-    border-radius:5px;
+	-moz-border-radius-topright:0 4px 4px 0;
+	-khtml-border-radius-topright:0 5px 5px 0;
+	-webkit-border-top-right-radius:0 5px 5px 0;
+    border-radius:0 5px 5px 0;
 }
 
 table th.row1 a {
