--- a/templates/newbase/theme/content.css
+++ b/templates/newbase/theme/content.css
@@ -26,18 +26,14 @@ div.block_contents {
 div.block_top, table tr:first-child th {
     padding:5px 6px;
     color:#FFFFFF;
-    background:#5D7C94 url(images/msg_top_row.png) repeat-x;
+    background:#366393;
     text-align:left;
     font-size:0.75em;
-    font-weight:bold;
+    font-weight:normal;
     text-transform:uppercase;
 }
 .block_top {
 	margin-top:-1px;
-	-moz-border-radius:4px 4px 0px 0px;
-	-khtml-border-radius:5px;
-	-webkit-border-radius:5px;
-    border-radius:5px;
 }
 
 table caption {
@@ -50,21 +46,11 @@ table caption a {
 }
 
 table th:first-child{
-	-moz-border-radius:4px 0 0 4px;
-	-khtml-border-radius:5px 0 0 5px;
-	-webkit-border-radius:5px 0 0 5px;
-    border-radius:5px 0 0 5px;
+
 }
 
 table th:last-child{
-	-moz-border-radius-topright:4px;
-	-khtml-border-radius-topright:5px;
-	-webkit-border-top-right-radius:5px;
-    border-top-right-radius:5px;
-	-moz-border-radius-bottomright:4px;
-	-khtml-border-radius-bottomright:5px;
-	-webkit-border-bottom-right-radius:5px;
-    border-bottom-right-radius:5px;
+
 }
 
 table th.row1 a {
@@ -105,7 +91,7 @@ h3.title {
 
 /* Sous-Titres */
 h5.sub_title { /* Titre des menu */
-    font-size:12px;
+    font-size:13px;
     color:#515C68;
 }
 
@@ -131,8 +117,8 @@ input, textarea, optgroup, select, .xmlhttprequest_preview{
 	font-family:"Lucida Grande","Lucida Sans Unicode",Verdana,'Bitstream Vera Sans',Times,serif;
 	font-size:11px;
 	vertical-align:middle;
-	border-left:1px solid #6993AE;
-	border-top:1px solid #6993AE;
+	border-left:1px solid #99b1cb;
+	border-top:1px solid #99b1cb;
 	border-right:1px solid #CCCCCC;
 	border-bottom:1px solid #CCCCCC;
 	background-color:#FFFFFF;	
@@ -141,7 +127,7 @@ input, textarea, optgroup, select, .xmlhttprequest_preview{
 }
 
 input:hover, textarea:hover{
-	border:1px solid #213D4F;
+	border:1px solid #336397;
 	background-color:#FFFFFF; 
 }
 
@@ -554,7 +540,7 @@ a.msg_link_pseudo:hover {
     font-size:12px;
     font-weight:bold;
     color:#515C68;
-    border-bottom:2px solid #515C68;
+    border-bottom:2px solid #336397;
 }
 
 .module_top a {
@@ -614,10 +600,8 @@ a.msg_link_pseudo:hover {
 	border-collapse:separate;
 	padding:0px;
 	border:1px solid #CCCCCC;
-	-moz-border-radius:5px;
-	-khtml-border-radius:5px;
-	-webkit-border-radius:5px;
-    border-radius:5px;
+
+    background:#e8edf3;
 }
 *+html .module_table { /* Hack ie7 */
 	border-collapse:collapse;
