--- a/templates/newbase/theme/bbcode.css
+++ b/templates/newbase/theme/bbcode.css
@@ -2,11 +2,16 @@
 /* Tableau du bbcode */
 .bbcode, .bbcode2{
 	width:485px;
-	background:url(images/bb_form.png);
-	border:1px solid #63839F;
+	background:#336397;
+	border:1px solid #BEBEBE;
 	border-collapse:collapse;
 	border-spacing:0px;
+	
 }
+.bbcode td, .bbcode2 td{
+	padding-top:5px; 
+}
+
 .bbcode2{
 	width:485px;
 }
