{THEME} Update Theme NewBase  (Admin) - Correction d'une erreur dans le tpl admin (row1 -> Row2) - Ajout du Logo et du site name dans le header de l'admin

--- a/templates/newbase/theme/admin.css
+++ b/templates/newbase/theme/admin.css
@@ -26,16 +26,7 @@ div#admin_extend_link{
 	float:right;
 	margin-right:15px;
 	margin-top:-3px;
-	background:#F2F7FB;
-    border:1px solid #C4CED6;
     padding:4px 6px;
-    -moz-border-radius-topleft:12px;
-    -khtml-border-radius-topleft:12px;
-    -webkit-border-top-left-radius:12px;
-    -moz-border-radius-bottomright:12px;
-    -khtml-border-radius-bottomright:12px;
-    -webkit-border-bottom-right-radius:12px;
-    border-radius:12px;
 }
 
 /* Conteneur principal */
@@ -49,14 +40,12 @@ div#admin_main {
 div#admin_contents {
     margin:auto;
     margin-left:202px;
-    border:1px #cccccc solid;
+
     border-spacing:1px;
     padding:10px;
-    background:#F7F8F5 url(images/contentbg.png) repeat-x;
-    -moz-border-radius:12px;
-    -khtml-border-radius:12px;
-    -webkit-border-radius:12px;
-    border-radius:12px;
+    background:#FFFFFF;
+    border:1px #BEBEBE solid;
+    border-bottom:2px solid #99B1CB;
 }
 
 html>body div#admin_contents {
@@ -71,15 +60,13 @@ div#admin_quick_menu {
     text-align:center;
     padding-top:5px;
     margin:auto;
-    border:1px #cccccc solid;
+    
     border-spacing:1px;
     padding:10px;
     padding-bottom:20px;
-    background:#F7F8F5 url(images/contentbg.png) repeat-x;
-    -moz-border-radius:12px;
-    -khtml-border-radius:12px;
-    -webkit-border-radius:12px;
-    border-radius:12px;
+    background:#FFFFFF;
+    border:1px #BEBEBE solid;
+    border-bottom:2px solid #99B1CB;
 }
 
 div#admin_quick_menu ul {
@@ -90,41 +77,33 @@ div#admin_quick_menu ul {
 
 div#admin_quick_menu li {
     display:block;
-    width:160px;
+    width:auto;
     padding:15px 0px;
+    
 }
 
 div#admin_quick_menu li.title_menu {
     font-family:Verdana, 'Bitstream Vera Sans', Times, serif;
     text-transform:uppercase;
     font-weight:bold;
-    font-size:0.75em;
-	background:#5D7C94 url(images/msg_top_row.png) repeat-x;
-    border:1px solid #CCCCCC;
-    color:#FFFFFF;
-    padding:3px 0px;
+    font-size:11px;
+ 
+    color:#0E2A48;
+    padding:6px 0px;
 	margin-bottom:20px;
-    -moz-border-radius:12px;
-    -khtml-border-radius:12px;
-    -webkit-border-radius:12px;
-    border-radius:12px;
+	border-bottom: 2px solid #336397;
 }
 
 div#admin_quick_menu li a.quick_link {
     font-family:Verdana, 'Bitstream Vera Sans', Times, serif;
-    text-transform:uppercase;
-    font-weight:bold;
-    font-size:0.75em;
-    color:#FFFFFF;
-	background:#5D7C94 url(images/msg_top_row.png) repeat-x;
+    text-transform:none;
+    font-weight:normal;
+    font-size:10px;
+    color:#0E2A48;
+	background: none repeat scroll 0 0 #e8edf3;
     border:1px solid #CCCCCC;
     padding:3px 8px;
     text-decoration:none;
-    line-height:2.2em;
-    -moz-border-radius:5px;
-    -khtml-border-radius:5px;
-    -webkit-border-radius:5px;
-    border-radius:5px;
 }
 
 /* Tableaux de l'administration */
@@ -148,7 +127,7 @@ div#admin_quick_menu li a.quick_link {
 /* Liens vers les menus étendus */
 a.admin_extend_link {
     text-decoration:none;
-    color:#666666;
+    color:#FFFFFF;
 }
 
 /* Coloration des moteur de recherche */
