--- a/templates/newbase/theme/global.css
+++ b/templates/newbase/theme/global.css
@@ -160,27 +160,22 @@ a.membre {
 --------------------------------------*/
 /* Lien du menu */
 .dynamic_menu h5 {
-    color:#515C68;
-    background:#F2F7FB;
-    border:1px solid #C4CED6;
+    color:#FFFFFF;
 	margin-right:2px;
-	-moz-border-radius-topleft:12px;
-    -khtml-border-radius-topleft:12px;
-    -webkit-border-top-left-radius:12px;
-    -moz-border-radius-bottomright:12px;
-    -khtml-border-radius-bottomright:12px;
-    -webkit-border-bottom-right-radius:12px;
-    border-radius:12px;
+	background:none;
+	border:none;
+	font-weight:normal;
 }
 
 .dynamic_menu h5:hover {
-    color:#01528D;
-    background:#eaedee;
+    color:#366393;
+    background:#e8edf3;
+     border-bottom:1px solid #99B1CB;
 }
 
 /* Séparateur */
 .dynamic_menu ul li.separator {
-    background:#849AAC;
+    background:#e8edf3;
 }
 
 .dynamic_menu ul li.extend {
@@ -189,7 +184,8 @@ a.membre {
 
 /* Case du menu */
 .dynamic_menu li ul {
-    border:1px solid #849AAC;
+    border:none;
+    border-bottom:1px solid #99B1CB;
 }
 
 .dynamic_menu li li {
