--- a/templates/newbase/theme/content.css
+++ b/templates/newbase/theme/content.css
@@ -12,8 +12,10 @@ table {
 div.block_container {
     width:auto;
 	margin:10px auto;
-    border:1px #bebebe solid;
-    background:#ffffff;
+    border: 1px solid #CCCCCC;
+    border-top:10px solid #366393;
+    border-bottom: 2px solid #99B1CB;
+    background:#F2F8FF;
     padding:5px;
 }
 div.block_contents {
@@ -221,8 +223,8 @@ legend {
 	font-family:"Lucida Grande","Lucida Sans Unicode",Verdana,'Bitstream Vera Sans',Times,serif;
 	font-size:0.85em;
 	font-weight:bold;
-	background:#99B1CB;
-	border:1px solid #336397;
+	background:#e8ebef;
+	border:1px solid #cbd4de;
 	padding:2px 10px;
 	margin-top:-0.4em;
 	margin-left:0.5em;
@@ -233,9 +235,6 @@ legend {
 	top:0;
 	vertical-align:middle;
 	text-transform:uppercase;
-	-moz-border-radius:3px;
-	-khtml-border-radius:3px;
-	-webkit-border-radius:3px;
 }
 * html legend {
     margin:0 0 -10px -7px;
@@ -247,13 +246,10 @@ fieldset{
 	font-family:"Lucida Grande","Lucida Sans Unicode",Verdana,'Bitstream Vera Sans',Times,serif;
 	margin:20px 0;
 	padding:6px;
-	border:1px solid #BEBEBE;
+	border:1px solid #d6dee7;
 	color:#445766;
-	background:#E8EDF3;
+	background:#FAFBFC;
 	position:relative;
-	-moz-border-radius:5px;
-	-khtml-border-radius:5px;
-	-webkit-border-radius:5px;
 }
 fieldset.fieldset_submit{
 	margin-top:-10px;
@@ -588,8 +584,7 @@ a.msg_link_pseudo:hover {
 	border-collapse:separate;
 	padding:0px;
 	border:1px solid #CCCCCC;
-
-    background:#e8edf3;
+    background:#f2f8ff;
 }
 *+html .module_table { /* Hack ie7 */
 	border-collapse:collapse;
