--- a/templates/newbase/theme/content.css
+++ b/templates/newbase/theme/content.css
@@ -583,7 +583,7 @@ a.msg_link_pseudo:hover {
 	border-spacing:0px;
 	border-collapse:separate;
 	padding:0px;
-	border:1px solid #CCCCCC;
+	border:1px solid #D6DEE7;
     background:#f2f8ff;
 }
 *+html .module_table { /* Hack ie7 */
