--- a/templates/newbase/theme/global.css
+++ b/templates/newbase/theme/global.css
@@ -23,16 +23,12 @@
 }
 
 .row3,.block_contents3 {
-    background:#F2F7FB;
-    border-color:#C4CED6;
+
     padding:8px 6px;
-	border-top:1px solid #CCCCCC;
-	-moz-border-radius:0px 0px 5px 5px;
-	-khtml-border-bottom-right-radius:5px;
-	-khtml-border-bottom-left-radius:5px;
-	-webkit-border-bottom-right-radius:5px;
-	-webkit-border-bottom-left-radius:5px;
-    border-radius:5px;
+    background: none repeat scroll 0 0 #F2F7FB;
+    border: 1px solid #D6DEE7;
+    border-bottom: 1px solid #99B1CB;
+
 }
 
 .block_contents3 {
