--- a/templates/newbase/theme/content.css
+++ b/templates/newbase/theme/content.css
@@ -367,7 +367,7 @@ a.msg_link_pseudo:hover {
 
 .msg_container,.msg_container2 {
     /* Case contenant l'ensemble du message */
-    background:#e8edf3;
+    background:#EEEEEE;
     overflow:hidden !important;
     height:auto !important;
     overflow:visible;
@@ -441,7 +441,7 @@ a.msg_link_pseudo:hover {
 }
 
 .msg_info_mbr { /* Case des informations du membre */
-    background:#e8edf3;
+    background:#EEEEEE;
     width:127px;
     padding:4px;
     float:left;
@@ -452,18 +452,18 @@ a.msg_link_pseudo:hover {
 .msg_contents_container {
     /* Case contenant l'ensemble du message, infos membre + contenu */
     margin-right:1px;
-    background:#e8edf3;
+    background:#EEEEEE;
 }
 
 .msg_contents,.msg_contents2 { /* Case du message */
     margin-left:135px;
-    background:#e8edf3;
+    background:#EEEEEE;
     padding:0px 5px;
     border-left:1px dotted #C4CED6;
 }
 
 .msg_contents2 { /* Case du message => Couleur alternative */
-    background:#e8edf3;
+    background:#EEEEEE;
 }
 
 .msg_contents_overflow {
@@ -477,7 +477,7 @@ a.msg_link_pseudo:hover {
 }
 
 .msg_sign,.msg_sign2 { /* Signature du membre */
-   	background:#e8edf3;
+   	background:#EEEEEE;
     padding:4px;
     font-size:11px;
     margin-left:135px;
@@ -485,7 +485,7 @@ a.msg_link_pseudo:hover {
 }
 
 .msg_sign2 { /* Signature du membre => Couleur alternative */
-    background:#e8edf3;
+    background:#EEEEEE;
 }
 
 .msg_sign_overflow { /* Signature du membre, fixe la hauteur maximale */
