--- a/install/templates/install.css
+++ b/install/templates/install.css
@@ -1,6 +1,6 @@
-/* Coprs du site */
+/* Corps du site */
 body{
-    background:#E9ECEF url(images/global.png) repeat-x;
+    background:#E8EDF3 url(images/global.png) repeat-x;
 	font-size:12px;
 	font-family:"Lucida Grande","Lucida Sans Unicode",Verdana,'Bitstream Vera Sans',Times,serif;
 	color:#0E2A48;
@@ -15,13 +15,13 @@ html, body{
 div#global{
 	width:1000px;
     margin:auto;
-    min-height: 100%;
+    min-height: 89%;
 }
 div#header_container {
     background: url(images/header.png) no-repeat;
-    background-position:20px 0px;
+    background-position:50px 30px;
 	margin-bottom:8px;
-	height:100px;
+	height:150px;
 }
 div#left_menu{
 	margin-top:38px;
@@ -360,15 +360,15 @@ legend{
 	font-family:"Lucida Grande","Lucida Sans Unicode",Verdana,'Bitstream Vera Sans',Times,serif;
 	font-size:0.85em;
 	font-weight:bold;
-	background:#D2E3F1;
-	border:1px solid #CCCCCC;
+	background: #D7DFE9;
+	border: 1px solid #BBCDE0;
 	padding:2px 10px;
 	margin-top:-0.4em;
 	margin-left:0.5em;
 	position:relative;
 	text-transform:none;
 	line-height:1.5em;
-	color:#333333;
+	color: #333;
 	top:0;
 	vertical-align:middle;
 	text-transform:uppercase;
@@ -382,16 +382,13 @@ legend{
 	font-size:.85em;
 }
 fieldset{
-	font-family:"Lucida Grande","Lucida Sans Unicode",Verdana,'Bitstream Vera Sans',Times,serif;
-	margin:20px 0;
-	padding:6px;
-	border:1px solid #CCCCCC;
-	color:#445766;
-	background:#eceeef;
-	position:relative;
-	-moz-border-radius: 5px;
-	-khtml-border-radius: 5px;
-	-webkit-border-radius: 5px;
+	font-family: "Lucida Grande","Lucida Sans Unicode",Verdana,'Bitstream Vera Sans',Times,serif;
+	margin: 20px 0;
+	padding: 6px;
+	border: 1px solid #D6DEE7;
+	color: #445766;
+	background: #ECEFFA;
+	position: relative;
 }
 fieldset.fieldset_submit{
 	width:250px;
